--- a/src/features/App/App.css
+++ b/src/features/App/App.css
@@ -5,17 +5,16 @@
   --white2: #fafbfc;
   --white1: #ffffff;
 
-  --dark-blue-gray5: #102a43;
-  --dark-blue-gray4: #243b53;
-  --dark-blue-gray3: #334e68;
-  --dark-blue-gray2: #486581;
-  --dark-blue-gray1: #627d98;
-
-  --blue-gray5: #829ab1;
-  --blue-gray4: #9fb3c8;
-  --blue-gray3: #bcccdc;
-  --blue-gray2: #d9e2ec;
-  --blue-gray1: #f0f4f8;
+  --gray10: #102a43;
+  --gray9: #243b53;
+  --gray8: #334e68;
+  --gray7: #486581;
+  --gray6: #627d98;
+  --gray5: #829ab1;
+  --gray4: #9fb3c8;
+  --gray3: #bcccdc;
+  --gray2: #d9e2ec;
+  --gray1: #f0f4f8;
 
   --blue10: #035388;
   --blue9: #0b69a3;
@@ -82,4 +81,101 @@
   --pink3: #ff8cba;
   --pink2: #ffb8d2;
   --pink1: #ffe3ec;
+
+  --p500: 31.25rem;
+  --p450: 28.125rem;
+  --p425: 26.563rem;
+  --p414: 25.875rem;
+  --p325: 20.313rem;
+  --p300: 18.75rem;
+  --p257: 16.063rem;
+  --p224: 14rem;
+  --p200: 12.5rem;
+  --p100: 6.25rem;
+  --p80: 5rem;
+  --p60: 3.75rem;
+  --p44: 2.75rem;
+  --p34: 2.125rem;
+  --p24: 1.5rem;
+  --p18: 1.25rem;
+  --p16: 1rem;
+  --p14: 0.875rem;
+  --p12: 0.75rem;
+  --p8: 0.5rem;
+  --p4: 0.25rem;
+}
+
+.shade5 {
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+}
+.shade4 {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05), 0 15px 25px rgba(0, 0, 0, 0.15);
+}
+.shade3 {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.15);
+}
+.shade2 {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.15);
+}
+.shade1 {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.24), 0 1px 3px rgba(0, 0, 0, 0.12);
+}
+
+.ml16 {
+  margin-left: var(--p16);
+}
+.mr16 {
+  margin-right: var(--p16);
+}
+.mt16 {
+  margin-top: var(--p16);
+}
+.mb16 {
+  margin-bottom: var(--p16);
+}
+.ml8 {
+  margin-left: var(--p8);
+}
+.mr8 {
+  margin-right: var(--p8);
+}
+.mt8 {
+  margin-top: var(--p8);
+}
+.mb8 {
+  margin-bottom: var(--p8);
+}
+.ml4 {
+  margin-left: var(--p4);
+}
+.mr4 {
+  margin-right: var(--p4);
+}
+.mt4 {
+  margin-top: var(--p4);
+}
+.mb4 {
+  margin-bottom: var(--p4);
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: ProximaNova-Regular, Arial, Helvetica, sans-serif;
+  font-size: var(--p16);
+}
+
+h1 {
+  font-size: var(--p24);
+  font-family: ProximaNova-Bold;
+}
+
+h2 {
+  font-size: var(--p18);
+  font-family: ProximaNova-Bold;
+}
+
+h3 {
+  font-size: var(--p16);
+  font-family: ProximaNova-Semibold;
 }
