--- a/src/features/App/App.css
+++ b/src/features/App/App.css
@@ -92,6 +92,7 @@
   --p224: 14rem;
   --p200: 12.5rem;
   --p100: 6.25rem;
+  --p90: 5.625rem;
   --p86: 5.375rem;
   --p64: 4rem;
   --p60: 3.75rem;
@@ -152,6 +153,10 @@
 }
 .shade1 {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.24), 0 1px 3px rgba(0, 0, 0, 0.12);
+}
+
+.scrolled {
+  display: none !important;
 }
 
 body {
