feat: render tenant connections in the Sidebar component

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,8 @@
   --p640: 40rem;
   --p512: 32rem;
   --p384: 24rem;
+  --p300: 18.75rem;
+  --p288: 18rem;
   --p256: 16rem;
   --p192: 12rem;
   --p128: 8rem;
@@ -94,6 +96,7 @@
   --p48: 3rem;
   --p32: 2rem;
   --p24: 1.5rem;
+  --p20: 1.25rem;
   --p18: 1.125rem;
   --p16: 1rem;
   --p14: 0.875rem;
